--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   http: ^1.2.1
   google_generative_ai: ^0.4.0
   provider: ^6.1.2
+  animated_text_kit: ^4.2.2
+  flutter_tts: ^4.0.2
 
 dev_dependencies:
   flutter_test:
